--- a/src/app/dialog/dialog.component.scss
+++ b/src/app/dialog/dialog.component.scss
@@ -63,6 +63,9 @@
       border: 0;
       background: white;
     }
+    .modal-card-body {
+      padding: 3rem 20px 0;
+    }
     .modal-card-foot {
       justify-content: flex-end;
       border-radius: 0;
