--- a/src/app/features/store-detail/components/actions/actions.component.html
+++ b/src/app/features/store-detail/components/actions/actions.component.html
@@ -1,8 +1,5 @@
 <div class="container has-text-centered has-padding-t-2 has-padding-b-2">
-  <div class="title-section">
-    <p class="title-name">Sobre nosotros</p>
-    <div class="title-line"></div>
-  </div>
+  <app-title-section title="Sobre nosotros"></app-title-section>
   <p class="has-margin-2">{{data.store.descriptionStore}}</p>
 </div>
 
