--- a/src/app/features/store-detail/components/catalogue/catalogue.component.html
+++ b/src/app/features/store-detail/components/catalogue/catalogue.component.html
@@ -1,11 +1,4 @@
-<div class="title-section">
-  <div class="d-flex justify-content-center">
-    <span class="title-name">{{title}}</span>
-  </div>
-  <div class="d-flex justify-content-center">
-    <div class="title-line"></div>
-  </div>
-</div>
+<app-title-section [title]="title"></app-title-section>
 
 <!-- Search section -->
 <div class="is-clearfix has-padding-t-6 has-padding-b-6">
