--- a/src/app/features/store-detail/components/head-store/head-store.component.html
+++ b/src/app/features/store-detail/components/head-store/head-store.component.html
@@ -33,8 +33,8 @@
 
 <div #banner class="store-banner">
   <div class="blend-yellow-light">
-    <img *ngIf="pixeles > 576" class="banner-img" src="{{url+data.store.urlBannerDesktopStore}}">
-    <img *ngIf="pixeles <= 576" class="banner-img" src="{{url+data.store.urlBannerMobileStore}}">
+    <img appParallax [ratio]="-0.5" *ngIf="pixeles > 576" class="banner-img" src="{{url+data.store.urlBannerDesktopStore}}">
+    <img appParallax [ratio]="-0.5" *ngIf="pixeles <= 576" class="banner-img" src="{{url+data.store.urlBannerMobileStore}}">
   </div>
   <div class="main-information-store">
     <div *ngIf="data.store.renderedLogo" class="container-logo">
