--- a/src/app/features/store-detail/components/head-store/head-store.component.html
+++ b/src/app/features/store-detail/components/head-store/head-store.component.html
@@ -32,7 +32,7 @@
 <!-- StoreBanner -->
 
 <div #banner class="store-banner">
-  <div class="blend-yellow-light">
+  <div class="{{nameTheme == 'orange' ? 'blend-yellow-light' : nameTheme == 'light' ? 'light' : nameTheme == 'blue' ? 'blend-red-blue-dark' : nameTheme == 'red' ? 'blend-red-dark' : 'dark'}}">
     <img appParallax [ratio]="-0.5" *ngIf="pixeles > 576" class="banner-img" src="{{url+data.store.urlBannerDesktopStore}}">
     <img appParallax [ratio]="-0.5" *ngIf="pixeles <= 576" class="banner-img" src="{{url+data.store.urlBannerMobileStore}}">
   </div>
