--- a/src/app/features/store-detail/components/head-store/head-store.component.scss
+++ b/src/app/features/store-detail/components/head-store/head-store.component.scss
@@ -105,6 +105,30 @@
   a {
     color: white;
   }
+  .dark,
+  .light {
+    &:after {
+      display: block;
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+  }
+  
+  .dark {
+    &:after {
+      background: rgba(0, 0, 0, 0.5);
+    }
+  }
+  .light {
+    &:after {
+      background: rgba(255, 255, 255, 0.5);
+    }
+  }
+
   .banner-img {
     width: 100%;
     height: 100vh;
