--- a/src/app/features/search-result/components/product-card/product-card.component.scss
+++ b/src/app/features/search-result/components/product-card/product-card.component.scss
@@ -3,7 +3,7 @@
     margin: 5px;
     border: 1px solid rgb(229, 230, 231);
     border-radius: 0;
-    box-shadow: 2px 4px 4px -3px rgba(0, 0, 0, 0.3);
+    box-shadow: none;
     transition: 0.65s;
     overflow: hidden;
 
