--- a/src/app/features/store-detail/components/head-store/head-store.component.scss
+++ b/src/app/features/store-detail/components/head-store/head-store.component.scss
@@ -6,8 +6,7 @@
   height: 60px;
   transition: all 0.5s ease-in-out;
   &.menu-fixed {
-    background-color: #fffefd;
-    background-color: rgba(255, 254, 253, 0.97);
+    @include background('backgroundNavbar');
     border-radius: 0;
     box-shadow: 0 3px 9px rgba(8, 33, 30, 0.15);
     padding-top: 0;
@@ -27,7 +26,7 @@
       &::after {
         display: block;
         content: "";
-        @include border('primary', 0, 0, 1px, 0);
+        @include border('colorNavbar', 0, 0, 1px, 0);
         transform: scaleX(0);
         transition: transform .25s ease-in-out;
       }
@@ -61,7 +60,8 @@
     }
   }
   a {
-    color: white;
+    // color: white;
+    @include color('colorNavbar');
     font-size: 1rem;
   }
 }
@@ -104,6 +104,7 @@
   overflow: hidden;
   a {
     color: white;
+    @include color('colorNavbar');
   }
   .dark,
   .light {
