--- a/src/app/features/product-detail/components/comments/comments.component.html
+++ b/src/app/features/product-detail/components/comments/comments.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
   <div class="field-label is-marginless">
-    <button class="button is-outlined is-primary is-pulled-right" (click)="sendComment(content)">Enviar</button>
+    <button class="button is-outlined is-primary is-pulled-right" (click)="sendComment(comment)">Enviar</button>
   </div>
 </div>
 
