--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,10 @@ p {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;  
+}
+
 .flex-center {
   align-items: center;
   justify-content: center;
