--- a/src/app/features/store-detail/components/head-store/head-store.component.scss
+++ b/src/app/features/store-detail/components/head-store/head-store.component.scss
@@ -41,7 +41,8 @@
     }
   }
   &.active {
-    background: linear-gradient(to top, rgba(255, 0, 0, 0), $primary);
+    @include background('backgroundNavbarActive');
+    // background: linear-gradient(to top, rgba(255, 0, 0, 0), $primary);
     height: 100%;
     .navbar-menu {
       background-color: transparent;
