--- a/src/app/features/store-detail/components/team/team.component.scss
+++ b/src/app/features/store-detail/components/team/team.component.scss
@@ -1,19 +1,9 @@
 .team-container {
   .team-wrapper {
-
-    padding-top: 25px;
-    padding-bottom: 25px;
+    a {
+      color: #888888;
+    }
     background-color: white;
-
-    @media (max-width: 1200px) {
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-
-    @media (max-width:360px) {
-      padding: 10px 0px;
-      max-width: 140px;
-    }
 
     .team-image {
       width: 80%;
@@ -24,16 +14,6 @@
         width: 200px;
         height: 200px;
         border-radius: 50%;
-
-        @media (max-width: 1200px) {
-          width: 150px;
-          height: 150px;
-        }
-
-        @media (max-width:400px) {
-          width: 90px;
-          height: 90px;
-        }
       }
     }
 
@@ -42,7 +22,6 @@
 
       .name {
         font-weight: 600;
-        height: 50px;
 
         @media(max-width: 360px) {
           font-size: 12px;
@@ -52,16 +31,6 @@
       .description {
         text-transform: uppercase;
         font-size: 12px;
-      }
-    }
-  }
-}
-
-@media (max-width: 575px) {
-  .team-container {
-    .team-wrapper {
-      .team-image {
-        max-width: 70%;
       }
     }
   }
